style(Appointments): Added mobile styling to try to fix mobile alignment of timeline

--- a/src/sass/modules/appointments.scss
+++ b/src/sass/modules/appointments.scss
@@ -42,6 +42,12 @@
     h2 {
         font: 1em/2 "Noto Sans", sans-serif;
     }
+
+    @media #{$mobile} {
+        margin-left: 18px;
+        width: 70%;
+    }
+
 }
 
 .timeline-block::after {
